# vscode-pipelex

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PIPELEX_CHANGELOG.md  PIPELEX_CHANGES.md  README.md  TODOS.md  plxt.toml  publish-lsp.sh  pyproject.toml  taplo.toml
.claude/skills/bump-pipelex-version/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/release/references/: version-map.md
.claude/skills/release/scripts/: detect_changes.sh
.githooks/: pre-commit
.github/workflows/: check.yml  ci.yaml  releases.yaml  site.yaml  test-all.yml
crates/lsp-async-stub/: Cargo.toml
crates/lsp-async-stub/src/: handler.rs  listen.rs
crates/pipelex-cli/: Cargo.toml
crates/pipelex-cli/src/: args.rs  lib.rs
crates/pipelex-cli/src/commands/: config.rs  lsp.rs  mod.rs
crates/pipelex-cli/tests/: parity.rs  quiet_flag.rs  schema_path.rs
crates/pipelex-common/: Cargo.toml
crates/pipelex-common/src/: config.rs  environment.rs  lib.rs
crates/pipelex-lsp/: Cargo.toml
crates/pipelex-lsp/src/: lib.rs
crates/pipelex-py/: Cargo.toml  README.md  pipelex_tools.pyi  py.typed  pyproject.toml
crates/pipelex-py/src/: diagnostic.rs  format.rs  lib.rs  lint.rs  python.rs
crates/pipelex-py/tests/: test_smoke.py
crates/pipelex-wasm/: Cargo.toml
crates/pipelex-wasm/src/: environment.rs  lib.rs  lsp.rs
crates/taplo/: Cargo.toml
crates/taplo-cli/: Cargo.toml
crates/taplo-cli/src/: lib.rs  printing.rs
crates/taplo-cli/src/commands/: format.rs  lint.rs  lsp.rs
crates/taplo-common/: Cargo.toml
crates/taplo-common/schemas/: mthds_schema.json
crates/taplo-common/src/: config.rs  environment.rs  log.rs
crates/taplo-common/src/environment/: native.rs
crates/taplo-common/src/schema/: associations.rs  cache.rs  ext.rs  mod.rs
crates/taplo-lsp/: Cargo.toml
crates/taplo-lsp/src/: config.rs  diagnostics.rs  handlers.rs  lib.rs  world.rs
crates/taplo-lsp/src/handlers/: completion.rs  documents.rs  goto_definition.rs  hover.rs  initialize.rs  links.rs  mthds_resolution.rs  schema.rs  workspaces.rs
crates/taplo-lsp/src/handlers/tests/: goto_definition.rs  hover.rs  mod.rs
crates/taplo-wasm/: Cargo.toml
crates/taplo-wasm/src/: environment.rs  lsp.rs
crates/taplo/src/: lib.rs
crates/taplo/src/dom/: error.rs
crates/taplo/src/formatter/: mod.rs
docs/: README.md
docs/design/: architecture.md  pipelex-tools-certification.md  pipelex-tools-plan.md
docs/dev/: ci-and-branch-protection.md  local-dev-setup.md  pipelex-tools-python-bindings.md  plxt-integration-handoff.md  release-publishing.md
docs/features/: goto-definition.md  graph-pipe-navigation.md  syntax-color-palette.md  validation-backends.md
docs/guide/: plxt-usage-guide.md  taplo-usage-guide.md
docs/pipelex/: CHANGELOG.header.md  CONTRIBUTING.header.md  PYPI_README.md  README.header.md  VSCODE_README.header.md  pipelex-tools-certification.md  syntax-color-palette.md  syntax-coloring-review.md
editors/vscode/: CHANGELOG.md  LICENSE.md  PIPELEX.md  README.md  mthds.frontmatter.tmLanguage.json  mthds.markdown.tmLanguage.json  mthds.tmLanguage.json  package.json  plx.frontmatter.tmLanguage.json  plx.markdown.tmLanguage.json  plx.tmLanguage.json  pml.frontmatter.tmLanguage.json  pml.markdown.tmLanguage.json  pml.tmLanguage.json  rollup.config.browser-extension.mjs  rollup.config.browser-server.mjs  rollup.config.mjs  tsconfig.json  tsconfig.typecheck.json  tsconfig.webview.json
editors/vscode/config/: README.md  pipelex-color-palette.json  pipelex-extension-config.json
editors/vscode/scripts/: build.mjs  generate-from-config.js
editors/vscode/src/: client.ts  extension.ts  server-worker.ts  server.ts  util.ts
editors/vscode/src/commands/: conversion.ts  schema.ts
editors/vscode/src/pipelex/: htmlEscape.ts  pipeCodeLensProvider.ts  pipeTestProvider.ts  pipelexExtension.ts  semanticTokenProvider.ts  terminalRunner.ts
editors/vscode/src/pipelex/__tests__/: agentCliVersion.test.ts  apiValidationBackend.test.ts  apiVersionGate.test.ts  bundleGather.test.ts  bundleResolution.test.ts  cliValidationBackend.test.ts  crossFileDiagnostics.test.ts  graphAnalysis.test.ts  graphBuilders.test.ts  graphConfig.test.ts  graphControllers.test.ts  graphLayout.test.ts  graphPrimary.test.ts  lightColors.test.ts  methodGraphPanel.test.ts  pipeCodeLensProvider.test.ts  pipeTestProvider.test.ts  pipelexExtension.test.ts  pipelexValidator.test.ts  processUtils.test.ts  semanticTokenProvider.test.ts  settingScopes.test.ts  validation.test.ts
editors/vscode/src/pipelex/graph/: graphConfig.ts  graphspecDetector.ts  methodGraphPanel.ts
editors/vscode/src/syntax/: README.md  comment.ts  index.ts
editors/vscode/src/syntax/composite/: array.ts  (+3 more)
editors/vscode/themes/: README.md  pipelex-dark-color-theme.json  pipelex-light-color-theme.json
js/: .yarnrc.yml  package-lock.json  package.json
js/cli/: package.json
js/cli/src/: cli.ts
js/core/: package.json
js/lib/: package.json
js/lsp/: package.json  rollup.config.mjs
js/lsp/src/: index.ts
refactoring/: execution-plan.md  plxt-pypi-publishing.md  syntax-coloring-web-portability.md
scripts/: compose-docs.sh
temp/: graph-label-bug-handoff.md
test-data/: discord_newsletter.mthds  example.mthds  example.pml
test-data/mthds/: concept-tables.mthds  false-positives.mthds  jinja-templates.mthds  pipe-definitions.mthds  prompt-templates.mthds  steps.mthds
test-data/mthds/goto-definition/: concept_inputs_inline.mthds  concept_output.mthds  concept_refines.mthds  concept_with_multiplicity.mthds  document_comparison.mthds  extract_slides.mthds  namespaced_concept.mthds  pipe_reference.mthds  unrelated_key.mthds
test-data/mthds/hover/: concept_hover.mthds  pipe_hover.mthds
test-data/mthds/lint/: invalid_schema.mthds  valid.mthds
wip/: add-tsc-typecheck-gate.md  api-backend-code-review-followups.md  api-backend-plan.md  code-review-cross-file-pipe-navigation.md  cross-file-pipe-navigation.md  pipelex-tools-python-bindings.md  validation-backend-codereview-round1-deferred.md  validation-backend-deferred.md
(+45 files in other folders)
