[build-system]
requires      = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name            = "pipelex-tools"
description     = "Pipelex Tools CLI — TOML/MTHDS formatter, linter, and LSP"
authors         = [{ name = "tamasfe" }, { name = "Evotis S.A.S.", email = "oss@pipelex.com" }]
maintainers     = [{ name = "Pipelex staff", email = "oss@pipelex.com" }]
requires-python = ">=3.8"
dynamic         = ["version"]

keywords = [
  "toml",
  "mthds",
  "pipelex",
  "linter",
  "formatter",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage   = "https://github.com/Pipelex/vscode-pipelex"
Repository = "https://github.com/Pipelex/vscode-pipelex.git"
Tracker    = "https://github.com/Pipelex/vscode-pipelex/issues"

[tool.maturin]
bindings      = "bin"
manifest-path = "crates/pipelex-cli/Cargo.toml"
