[project]
name = "pipelex-tools"
description = "Pipelex Tools CLI — MTHDS/TOML formatter, linter, and LSP"
authors = [
  { name = "Evotis S.A.S.", email = "oss@pipelex.com" },
  { name = "tamasfe" },
]
maintainers = [{ name = "Pipelex staff", email = "oss@pipelex.com" }]
license = "MIT"
readme = "docs/pipelex/PYPI_README.md"
requires-python = ">=3.8,<3.15"
dynamic = ["version"]

keywords = [
  "toml",
  "mthds",
  "pipelex",
  "linter",
  "formatter",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage      = "https://github.com/Pipelex/vscode-pipelex"
Repository    = "https://github.com/Pipelex/vscode-pipelex.git"
Documentation = "https://docs.pipelex.com/"
Changelog     = "https://github.com/Pipelex/vscode-pipelex/blob/main/CHANGELOG.md"
Tracker       = "https://github.com/Pipelex/vscode-pipelex/issues"

[build-system]
requires      = ["maturin>=1.4"]
build-backend = "maturin"

[tool.maturin]
bindings      = "bin"
manifest-path = "crates/pipelex-cli/Cargo.toml"
include       = ["LICENSE"]
