[package]
name         = "pipelex-py"
description  = "Python bindings for Pipelex Tools — MTHDS lint & format as an importable library"
version      = "0.1.0"
publish      = false
rust-version = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
license      = { workspace = true }
homepage     = { workspace = true }
repository   = { workspace = true }

[lib]
# `name` is the Python module name; cdylib for maturin, rlib so `cargo test` can link the impls.
name       = "pipelex_tools"
crate-type = ["cdylib", "rlib"]

[dependencies]
taplo = { path = "../taplo" }
taplo-common = { path = "../taplo-common", features = [
  "rustls-tls",
  "schema",
  "reqwest",
] }

anyhow     = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url        = { workspace = true }
# current-thread runtime is enough for block_on in the lint schema stage.
tokio = { workspace = true, features = ["rt"] }

pyo3 = { version = "0.23", features = [
  "abi3-py38",
  "extension-module",
], optional = true }
pythonize = { version = "0.23", optional = true }

[features]
python = ["dep:pyo3", "dep:pythonize"]

[lints]
workspace = true
